I18n: many keymap sections cannot be translated #105548

Closed
opened 2023-03-07 20:20:23 +01:00 by Damien Picard · 2 comments
Member

System Information
Operating system: 'Linux-5.19.0-35-generic-x86_64-with-glibc2.36'
Graphics card: NVIDIA GeForce RTX 3060 Laptop GPU/PCIe/SSE2

Blender Version
Broken: 3.5.0 Beta, branch: blender-v3.5-release (modified), commit date: 2023-03-07 16:08, hash: 8f1136e018, type: Release
Worked: ?

Short description of error
In the keymap user preferences, shortcuts are grouped according to a hierarchy of topics. Many of these topics can be translated, but not all, as some are not extracted at all to the .po files. The first of those in the hierarchy is “3D View -> Mesh -> 3D View Tool: Edit Mesh, Extrude Region”, seen here in the French translation:

image

Exact steps for others to reproduce the error

  • Open the user preferences
  • Switch the translation language to a complete one (e. g. French)
  • Go to the keymap preferences
  • Open the 3D View -> Mesh hierarchy (in French, Vue 3D -> Maillage)
  • Scroll down
  • The translations stop at 3D View Tool: Edit Mesh, Extrude Region

So the problem with this is that not all of the keymap topics get extracted by the i18n script. The issue there happens in walk_keymap_hierarchy(). If the item in the hierarchy is not a string, it is skipped. This happens for tools defining their own keymap, because they use a function instead of a string as the name.

In turn, the issue is in keymap_hierarchy.generate(). If run in the interface, the hierarchy will contain only strings as topic names. However, if run in the background, some of them will still be functions, presumably because it relies on there being a window manager.

To verify this, run:

blender --background --python-expr "import bpy; from bl_keymap_utils import keymap_hierarchy; from pprint import pprint; pprint(keymap_hierarchy.generate()[5][3][1])"

versus:

blender --python-expr "import bpy; from bl_keymap_utils import keymap_hierarchy; from pprint import pprint; pprint(keymap_hierarchy.generate()[5][3][1])"

The background version prints:

  ('3D View Tool: Object, Add Primitive (fallback)', 'VIEW_3D', 'WINDOW', []),
  (<function _keymap_fn_from_seq.<locals>.keymap_fn at 0x7f3948a5b2e0>,
   'VIEW_3D',
   'WINDOW',
   []),

While the foreground version prints:

  ('3D View Tool: Object, Add Primitive (fallback)', 'VIEW_3D', 'WINDOW', []),
  ('3D View Tool: Edit Mesh, Extrude Region', 'VIEW_3D', 'WINDOW', []),

TL;DR keymap_hierarchy.generate() doesn’t return a usable keymap hierarchy when run in the background.

**System Information** Operating system: 'Linux-5.19.0-35-generic-x86_64-with-glibc2.36' Graphics card: NVIDIA GeForce RTX 3060 Laptop GPU/PCIe/SSE2 **Blender Version** Broken: 3.5.0 Beta, branch: blender-v3.5-release (modified), commit date: 2023-03-07 16:08, hash: 8f1136e018cf, type: Release Worked: ? **Short description of error** In the keymap user preferences, shortcuts are grouped according to a hierarchy of topics. Many of these topics can be translated, but not all, as some are not extracted at all to the .po files. The first of those in the hierarchy is “3D View -> Mesh -> 3D View Tool: Edit Mesh, Extrude Region”, seen here in the French translation: ![image](/attachments/4162b18a-2e36-40b6-a0ad-8fd9f6541f44) **Exact steps for others to reproduce the error** - Open the user preferences - Switch the translation language to a complete one (e. g. French) - Go to the keymap preferences - Open the 3D View -> Mesh hierarchy (in French, *Vue 3D* -> *Maillage*) - Scroll down - The translations stop at 3D View Tool: Edit Mesh, Extrude Region ----- So the problem with this is that not all of the keymap topics get extracted by the i18n script. The issue there happens in `walk_keymap_hierarchy()`. If the item in the hierarchy is not a string, it is skipped. This happens for tools defining their own keymap, because they use a function instead of a string as the name. In turn, the issue is in `keymap_hierarchy.generate()`. If run in the interface, the hierarchy will contain only strings as topic names. However, if run in the background, some of them will still be functions, presumably because it relies on there being a window manager. To verify this, run: ``` blender --background --python-expr "import bpy; from bl_keymap_utils import keymap_hierarchy; from pprint import pprint; pprint(keymap_hierarchy.generate()[5][3][1])" ``` versus: ``` blender --python-expr "import bpy; from bl_keymap_utils import keymap_hierarchy; from pprint import pprint; pprint(keymap_hierarchy.generate()[5][3][1])" ``` The background version prints: ``` ('3D View Tool: Object, Add Primitive (fallback)', 'VIEW_3D', 'WINDOW', []), (<function _keymap_fn_from_seq.<locals>.keymap_fn at 0x7f3948a5b2e0>, 'VIEW_3D', 'WINDOW', []), ``` While the foreground version prints: ``` ('3D View Tool: Object, Add Primitive (fallback)', 'VIEW_3D', 'WINDOW', []), ('3D View Tool: Edit Mesh, Extrude Region', 'VIEW_3D', 'WINDOW', []), ``` **TL;DR** `keymap_hierarchy.generate()` doesn’t return a usable keymap hierarchy when run in the background.
Damien Picard added the
Priority
Normal
Type
Report
Status
Needs Triage
Interest
Translations
labels 2023-03-07 20:20:24 +01:00
Pratik Borhade added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-03-08 13:58:59 +01:00
Member

Can confirm.

Can confirm.
Philipp Oeser added the
Module
User Interface
label 2023-03-17 14:43:26 +01:00
Author
Member

I found a way to fix this, but I’m don’t fully understand what it implies. WM_check() is called when a file is opened or when a new window is created, but I’m not sure why the keyconfig init must be run at that point and not on startup. The current fix is simply to move WM_keyconfig_init() outside of the background check but maybe it should be moved somewhere else entirely?

diff --git a/source/blender/windowmanager/intern/wm.cc b/source/blender/windowmanager/intern/wm.cc
index 4791a02a185..1438ae6cbdc 100644
--- a/source/blender/windowmanager/intern/wm.cc
+++ b/source/blender/windowmanager/intern/wm.cc
@@ -474,10 +474,14 @@ void WM_check(bContext *C)
     wm->message_bus = WM_msgbus_create();
   }
 
+  /* Case: file-read. */
+  if ((wm->init_flag & WM_INIT_FLAG_WINDOW) == 0) {
+    WM_keyconfig_init(C);
+  }
+
   if (!G.background) {
     /* Case: file-read. */
     if ((wm->init_flag & WM_INIT_FLAG_WINDOW) == 0) {
-      WM_keyconfig_init(C);
       WM_file_autosave_init(wm);
     }
 
I found a way to fix this, but I’m don’t fully understand what it implies. `WM_check()` is called when a file is opened or when a new window is created, but I’m not sure why the keyconfig init must be run at that point and not on startup. The current fix is simply to move `WM_keyconfig_init()` outside of the background check but maybe it should be moved somewhere else entirely? ```diff diff --git a/source/blender/windowmanager/intern/wm.cc b/source/blender/windowmanager/intern/wm.cc index 4791a02a185..1438ae6cbdc 100644 --- a/source/blender/windowmanager/intern/wm.cc +++ b/source/blender/windowmanager/intern/wm.cc @@ -474,10 +474,14 @@ void WM_check(bContext *C) wm->message_bus = WM_msgbus_create(); } + /* Case: file-read. */ + if ((wm->init_flag & WM_INIT_FLAG_WINDOW) == 0) { + WM_keyconfig_init(C); + } + if (!G.background) { /* Case: file-read. */ if ((wm->init_flag & WM_INIT_FLAG_WINDOW) == 0) { - WM_keyconfig_init(C); WM_file_autosave_init(wm); } ```
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-20 01:55:19 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#105548
No description provided.